--- a/PortfolioAce/Views/HomeView.xaml
+++ b/PortfolioAce/Views/HomeView.xaml
@@ -26,7 +26,7 @@
         </Grid.RowDefinitions>
         <DockPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
             <TextBlock DockPanel.Dock="Top" HorizontalAlignment="Center" Text="Welcome To PortfolioAce" Style="{DynamicResource MaterialDesignHeadline3TextBlock}"/>
-            <TextBlock DockPanel.Dock="Top" Text="View Your Funds" HorizontalAlignment="Center"/>
+            <TextBlock DockPanel.Dock="Top" Text="View Your Funds" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline6TextBlock}"/>
         </DockPanel>
         <DataGrid Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Background="White" BorderBrush="DarkGray" BorderThickness="1" Margin="10">
             <DataGrid.Columns>
@@ -39,10 +39,97 @@
                 <!--Binding="{Binding TradeDate, StringFormat={}{0:dd/MM/yyyy}}"-->
             </DataGrid.Columns>
         </DataGrid>
-        <materialDesign:Card Grid.Row="2" Padding="32" Margin="16">
-            <TextBlock Text="You can reach out to me on these avenues (Github, Youtube, Linkedin) If you want to say thanks you can give me a star on GitHub"/>
-        </materialDesign:Card>
-        <lvc:CartesianChart Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Hoverable="True">
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="1" Grid.RowSpan="2">
+            <materialDesign:Card Padding="10" Margin="20">
+                <Grid >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Image
+                                Source="/PortfolioAce;component/Resources\portfolioace_logo2_hd.png"
+                                Grid.RowSpan="1"
+                                Width="125"
+                                MaxWidth="150"
+                                StretchDirection="Both"
+                                VerticalAlignment="Center"
+                                Stretch="UniformToFill"/>
+                    <WrapPanel Orientation="Vertical" Grid.Row="1" Grid.Column="0" Margin="16 0 16 8" MaxWidth="200">
+                        <TextBlock TextWrapping="Wrap" Foreground="{DynamicResource MaterialDesignBodyLight}"
+                                VerticalAlignment="Center"
+                               HorizontalAlignment="Left">
+                            This project is completely open source. If you like it and want to say
+                            thanks you could click on the GitHub Star button.
+                            If you have any questions feel free to reach out to me on the below platforms
+                        </TextBlock>
+                    </WrapPanel>
+
+                    <Border
+                                Grid.Column="0"
+                                Grid.Row="2"
+                                BorderThickness="0 1 0 0"
+                                BorderBrush="{DynamicResource MaterialDesignDivider}"
+                                Margin="0 8 0 0">
+                        <Grid Margin="8">
+                            <StackPanel Orientation="Horizontal">
+                                <Button
+                                        Style="{DynamicResource MaterialDesignFlatButton}"
+                                        HorizontalAlignment="Left">
+                                    <StackPanel Orientation="Horizontal">
+                                        <materialDesign:PackIcon Kind="Github"/>
+                                        <TextBlock
+                                                Margin="8 0 0 0"
+                                                VerticalAlignment="Center"
+                                                Text="GitHub"/>
+                                    </StackPanel>
+                                </Button>
+                                <Button
+                                        Style="{DynamicResource MaterialDesignFlatButton}"
+                                        HorizontalAlignment="Right">
+                                    <StackPanel Orientation="Horizontal">
+                                        <materialDesign:PackIcon Kind="Linkedin"/>
+                                        <TextBlock
+                                                Margin="8 0 0 0"
+                                                VerticalAlignment="Center"
+                                                Text="Linkedin"/>
+                                    </StackPanel>
+                                </Button>
+                            </StackPanel>
+                        </Grid>
+                    </Border>
+
+                    <Border
+                                Grid.Column="0"
+                                Grid.Row="3"
+                                BorderThickness="0 1 0 0"
+                                BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="8">
+                            <StackPanel Orientation="Horizontal">
+                                <Button
+                                        Style="{DynamicResource MaterialDesignFlatButton}"
+                                        HorizontalAlignment="Left">
+                                    <StackPanel Orientation="Horizontal">
+                                        <materialDesign:PackIcon Kind="Youtube"/>
+                                        <TextBlock
+                                                Margin="8 0 0 0"
+                                                VerticalAlignment="Center"
+                                                Text="Youtube"/>
+                                    </StackPanel>
+                                </Button>
+                            </StackPanel>
+                        </Grid>
+                    </Border>
+                </Grid>
+            </materialDesign:Card>
+        </StackPanel>
+        <lvc:CartesianChart Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Hoverable="True">
             <lvc:CartesianChart.Series>
                 <lvc:LineSeries Title="Nav Price" Values="{Binding NavPriceLineChartYAxis}"/>
             </lvc:CartesianChart.Series>
