--- a/PortfolioAce/Views/HomeView.xaml
+++ b/PortfolioAce/Views/HomeView.xaml
@@ -25,8 +25,8 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <DockPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
-            <TextBlock DockPanel.Dock="Top" HorizontalAlignment="Center" Text="Welcome To PortfolioAce" Style="{DynamicResource MaterialDesignHeadline3TextBlock}"/>
-            <TextBlock DockPanel.Dock="Top" Text="Version 0.9.0 beta" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline6TextBlock}"/>
+            <TextBlock DockPanel.Dock="Top" HorizontalAlignment="Center" Text="Welcome To PortfolioAce" Style="{DynamicResource MaterialDesignHeadline3TextBlock}" Foreground="#636363"/>
+            <TextBlock DockPanel.Dock="Top" Text="Version 0.9.0 beta" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline6TextBlock}" Foreground="#9c9c9c"/>
         </DockPanel>
         <DataGrid IsReadOnly="True" AutoGenerateColumns="False" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Background="White" BorderBrush="DarkGray" 
                   BorderThickness="1" Margin="10" ItemsSource="{Binding dgLatestNavPrices}" SelectedItem="{Binding selectedPrice,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
@@ -134,13 +134,13 @@
         </StackPanel>
         <lvc:CartesianChart Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Hoverable="True">
             <lvc:CartesianChart.Series>
-                <lvc:LineSeries Title="{Binding selectedPrice.Fund.Symbol, StringFormat={}{0} Nav Per Share}" Values="{Binding NavPriceLineChartYAxis}"/>
+                <lvc:LineSeries Title="{Binding selectedPrice.Fund.Symbol, StringFormat={}{0} Nav Per Share}" Values="{Binding NavPriceLineChartYAxis}" Fill="DarkGray" Stroke="Black" />
             </lvc:CartesianChart.Series>
             <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title="Date" Labels="{Binding NavPriceLineChartXAxis}" FontSize="12"/>
+                <lvc:Axis Title="Date" Labels="{Binding NavPriceLineChartXAxis}" FontSize="12" Foreground="Black"/>
             </lvc:CartesianChart.AxisX>
             <lvc:CartesianChart.AxisY>
-                <lvc:Axis Title="Nav per share"/>
+                <lvc:Axis Title="Nav per share" Foreground="Black"/>
             </lvc:CartesianChart.AxisY>
         </lvc:CartesianChart>
     </Grid>
