--- a/PortfolioAce/Views/SystemSecurityPricesView.xaml
+++ b/PortfolioAce/Views/SystemSecurityPricesView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PortfolioAce.Views"
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="1280">
     <Grid>
@@ -17,10 +18,40 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel>
-            <TextBlock Grid.Row="0" Text="All Security Prices" />
-            <TextBox  Grid.Row="0" Text="{Binding Symbol, UpdateSourceTrigger=PropertyChanged}"  Grid.Column="2" Grid.ColumnSpan="1"/>
-        </StackPanel>
-        <Button Command="{Binding SaveSecurityPriceCommand}" Grid.Row="0" Grid.Column="1" Margin="0,5,0,0" >Store Prices</Button>
+        <DockPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2">
+            <TextBlock DockPanel.Dock="Top" Text="{Binding SecurityInfo.SecurityName}" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline4TextBlock}" Foreground="#003300" FontWeight="Bold"/>
+            <lvc:CartesianChart DockPanel.Dock="Top" Hoverable="True" Margin="5">
+                <lvc:CartesianChart.Series>
+                    <lvc:LineSeries Title="Price" Values="{Binding SecurityPriceLineChartYAxis}" Fill="#96ffa9" Stroke="Green"/>
+                </lvc:CartesianChart.Series>
+                <lvc:CartesianChart.AxisX>
+                    <lvc:Axis Title="Date" Labels="{Binding SecurityPriceLineChartXAxis}" FontSize="12" Foreground="Black"/>
+                </lvc:CartesianChart.AxisX>
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis Title="Security Price"  Foreground="Black"/>
+                </lvc:CartesianChart.AxisY>
+            </lvc:CartesianChart>
+        </DockPanel>
+
+        <DataGrid Grid.Row="0" Grid.Column="2" Grid.RowSpan="3" RowBackground="White" AlternatingRowBackground="#e8ffec"
+                 ItemsSource="{Binding Path=dgSecurityPrices, UpdateSourceTrigger=PropertyChanged}" VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Date" Binding="{Binding Date, StringFormat={}{0:dd/MM/yyyy}}" />
+                <DataGridTextColumn Header="Close Price" Binding="{Binding ClosePrice, StringFormat=N2}"  />
+            </DataGrid.Columns>
+        </DataGrid>
+        <DockPanel Grid.Row="2" LastChildFill="False">
+            <WrapPanel DockPanel.Dock="Top">
+                <TextBlock Text="Security: " FontWeight="Bold" />
+                <ComboBox ItemsSource="{Binding cmbSecurities}" Margin="10,0,0,0" SelectedItem="{Binding Path=Symbol, UpdateSourceTrigger=PropertyChanged}" Width="100" MaxWidth="100" >
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding }" FontWeight="Bold"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </WrapPanel>
+        </DockPanel>
+        <Button Grid.Row="2" Grid.Column="1" Command="{Binding SaveSecurityPriceCommand}"  Margin="0,5,0,0" >Store Prices</Button>
     </Grid>
 </UserControl>
