--- a/PortfolioAce/Views/Modals/AddTradeWindow.xaml
+++ b/PortfolioAce/Views/Modals/AddTradeWindow.xaml
@@ -95,7 +95,7 @@
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-            <Button Command="{Binding AddTradeCommand}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}">Add Trade</Button>
+            <Button Command="{Binding AddTradeCommand}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}" Content="Add Trade" Style="{DynamicResource MaterialDesignFlatMidBgButton}"/> 
         </Grid>
     </Border>
 
