--- a/PortfolioAce/Views/Modals/EditCashTradeWindow.xaml
+++ b/PortfolioAce/Views/Modals/EditCashTradeWindow.xaml
@@ -86,7 +86,8 @@
             </ComboBox>
             <Label Grid.Row="7">Notes:</Label>
             <TextBox Text="{Binding Notes, UpdateSourceTrigger=PropertyChanged}" Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" AcceptsReturn="True"/>
-            <Button Command="{Binding EditCashTradeCommand}" Grid.Row="8" Grid.Column="1" Margin="0,5,0,0" IsEnabled="{Binding CanCreate}">Edit Cash Trade</Button>
+            <Button Command="{Binding EditCashTradeCommand}" Grid.Row="8" Grid.Column="1" Margin="0,5,0,0" IsEnabled="{Binding CanCreate}" 
+                   Style="{DynamicResource MaterialDesignFlatMidBgButton}" Content="Edit Cash Trade"/>
         </Grid>
     </Border>
 </Window>
