--- a/PortfolioAce/Views/Modals/EditTradeWindow.xaml
+++ b/PortfolioAce/Views/Modals/EditTradeWindow.xaml
@@ -89,7 +89,7 @@
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-            <Button Command="{Binding EditTradeCommand}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}">Edit Trade</Button>
+            <Button Command="{Binding EditTradeCommand}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}" Content="Edit Trade" Style="{DynamicResource MaterialDesignFlatMidBgButton}"/>
         </Grid>
     </Border>
 </Window>
