--- a/PortfolioAce/Views/Modals/SecurityManagerWindow.xaml
+++ b/PortfolioAce/Views/Modals/SecurityManagerWindow.xaml
@@ -84,7 +84,8 @@
                     </ComboBox>
                     <Label Grid.Row="5">ISIN:</Label>
                     <TextBox Text="{Binding ISIN, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
-                    <Button Command="{Binding AddSecurityCommand}" Grid.Row="6" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}">Add Security</Button>
+                    <Button Command="{Binding AddSecurityCommand}" Grid.Row="6" Grid.Column="1" Margin="0,10,0,0" 
+                            Style="{DynamicResource MaterialDesignFlatMidBgButton}" IsEnabled="{Binding CanCreate}" Content="Add Security"/>
                 </Grid>
             </TabItem>
             <TabItem Header="All Securities">
